# Distributed-Event-Log-Platform

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INTERVIEW.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: broker-0.yaml  broker-1.yaml  broker-2.yaml  default.yaml
distributedlog/: __init__.py
distributedlog/admin/: __init__.py
distributedlog/broker/: __init__.py  async_broker.py  client.py  main.py  metadata.py  registry.py  server.py  topic_service.py
distributedlog/broker/controller/: __init__.py  controller.py  metadata.py
distributedlog/broker/coordinator/: __init__.py
distributedlog/broker/reassignment/: __init__.py  executor.py  monitor.py  state.py  throttle.py
distributedlog/broker/replication/: __init__.py  ack.py  fetcher.py  replica.py  sync.py
distributedlog/broker/server/: __init__.py
distributedlog/consensus/: __init__.py
distributedlog/consensus/raft/: __init__.py  node.py  rpc.py  state.py
distributedlog/consumer/: __init__.py  consumer.py  fetcher.py  group_consumer.py  isolation.py  offset.py
distributedlog/consumer/group/: __init__.py  assignment.py  (+3 more)
distributedlog/core/: __init__.py
distributedlog/metrics/: __init__.py
distributedlog/producer/: __init__.py  batch.py  compression.py  idempotent_producer.py  metadata.py  partitioner.py  producer.py  retry.py  transactional_producer.py
distributedlog/protocol/: __init__.py
distributedlog/tests/: __init__.py
distributedlog/transaction/: __init__.py  coordinator.py  log.py  state.py
distributedlog/utils/: __init__.py  config.py  logging.py
docker/prometheus/: prometheus.yml
docs/: CONSUMER_CLIENT.md  LOG_MANAGER.md  LOG_STORAGE.md  OFFSET_INDEX.md  PRODUCER_CLIENT.md
examples/: __init__.py  consumer_example.py  producer_example.py  simple_demo.py
scripts/: generate_proto.sh
tests/broker/: __init__.py  test_async_broker.py  test_metadata.py  test_registry.py
tests/consensus/: __init__.py
tests/transaction/: __init__.py  test_transactions.py
(+78 files in other folders)
